--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "qrcode.react": "^4.2.0",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
