--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,43 @@
+# Node.js dependencies
+node_modules/
+npm-debug.log
+
 # Logs
-logs
+logs/
 *.log
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependency directories
+jspm_packages/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
+.env
+
+# MacOS files
 .DS_Store
+
+# Windows thumbnail cache files
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+node_modules
