--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "react-tooltip": "^5.28.0",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
