--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.13",
+    "@clerk/react-router": "^1.0.8",
     "@headlessui/react": "^2.2.0",
     "@react-oauth/google": "^0.12.1",
     "@stripe/react-stripe-js": "^3.1.1",
