--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.6.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.5",
@@ -25,13 +26,15 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
     "react-qr-code": "^2.0.15",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
