--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.3",
+    "react-parallax-tilt": "^1.7.290",
     "react-qr-code": "^2.0.15",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.4.1",
