--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.9",
+    "firebase": "^11.6.1",
     "framer-motion": "^12.6.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
